[package]
name = "stackalloc"
version = "0.1.0"
description = "allocate arbitrary bytes on the stack at runtime"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
cc = "1.0"
rustc_version = "0.2"
