[package]
name = "stackalloc"
version = "0.1.0"
description = "allocate arbitrary data on the stack at runtime"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
lazy_static = "1.4.0"

[build-dependencies]
cc = "1.0"
rustc_version = "0.2"
